--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "^21.0.0",
     "@angular/forms": "^21.0.0",
     "@google/genai": "^1.30.0",
+    "@supabase/supabase-js": "^2.84.0",
     "@angular/build": "^21.0.0",
     "@angular/cli": "^21.0.0",
     "@angular/compiler-cli": "^21.0.0",
